go to markdown design. Create table of contents

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -6,7 +6,7 @@ body {
   min-height: 350px;
   height: 100%;
   width: 100%;
-  background-color: $lightgrey;
+  background-color: $background;
   font-family: sans-serif;
 }
 
