--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,7 +8,7 @@ $worksans: 'Work Sans', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sa
 $green: #6ee7b7;
 $red: #fda4af;
 $grey: #94a3b8;
-$lightgrey: #f8fafc;
-$black: #374151;
+$background: #fff;
+$black: black;
 $blue: #204062;
 $soft: hsl(205deg, 35%, 95%);
